fixed overflow bug on userList and removed redundancy on color selector

--- a/public/index.css
+++ b/public/index.css
@@ -139,16 +139,16 @@ select:focus, textarea:focus, input:focus, button:focus {
     margin-bottom: 1.5%
 }
 
-#messageList::-webkit-scrollbar {
+#messageList::-webkit-scrollbar, #userList::-webkit-scrollbar {
     width: 8px;
     margin: 5px
 }
 
-#messageList::-webkit-scrollbar-track {
+#messageList::-webkit-scrollbar-track, #userList::-webkit-scrollbar-track {
     background: transparent
 }
 
-#messageList::-webkit-scrollbar-thumb {
+#messageList::-webkit-scrollbar-thumb, #userList::-webkit-scrollbar-thumb {
     border-radius: 20px;
     border: 3px solid grey;
     visibility: hidden;
@@ -156,8 +156,8 @@ select:focus, textarea:focus, input:focus, button:focus {
     background: grey
 }
 
-#messageList:hover::-webkit-scrollbar-thumb {
-    visibility: visible
+#messageList:hover::-webkit-scrollbar-thumb, #userList:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
 }
 
 #userListHeader {
@@ -177,7 +177,8 @@ select:focus, textarea:focus, input:focus, button:focus {
     width: 100%;
     height: 50%;
     text-align: center;
-    font-family: 'Markazi Text', serif
+    font-family: 'Markazi Text', serif;
+    overflow-x: hidden
 }
 
 .userName {
